--- a/code/rsrc/FXML/MainWindow.fxml
+++ b/code/rsrc/FXML/MainWindow.fxml
@@ -8,7 +8,7 @@
 
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.Font?>
-<BorderPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="View.MainWindow" prefWidth="600">
+<BorderPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="view.MainWindow" prefWidth="600">
     <center>
         <FlowPane orientation="VERTICAL" alignment="CENTER">
             <Text text="CHOISIR SON PSEUDO" >
