--- a/code/rsrc/FXML/MainWindow.fxml
+++ b/code/rsrc/FXML/MainWindow.fxml
@@ -1,27 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.image.Image?>
-<BorderPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="view.MainWindow" prefWidth="600">
+<?import javafx.scene.text.Text?>
+
+<BorderPane prefWidth="600" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.MainWindow">
     <center>
-        <FlowPane orientation="VERTICAL" alignment="CENTER">
-            <Text text="CHOISIR SON PSEUDO" >
+        <FlowPane alignment="CENTER" orientation="VERTICAL">
+            <Text text="CHOISIR SON PSEUDO">
                 <font>
-                    <Font size="40"/>
+                    <Font size="40" />
                 </font>
             </Text>
 
-            <TextField text="PSEUDO"/>
-            <Button text="START"/>
-            <Button minHeight="120" minWidth="120">
-            </Button>
+            <TextField text="PSEUDO" />
+            <Button prefHeight="37.0" prefWidth="444.0" text="START" textAlignment="CENTER" />
         </FlowPane>
     </center>
 
