--- a/code/rsrc/css/background.css
+++ b/code/rsrc/css/background.css
@@ -1,5 +1,5 @@
 #mainWindow{
-    -fx-background-image: url("../image/background.jpg");
+    -fx-background-image: url("../image/background2.png");
     -fx-background-repeat: repeat;
     -fx-background-size: cover, auto;
     -fx-effect: dropshadow(gaussian , rgba(255,255,255,0.5) , 0,0,0,1);
