--- a/code/rsrc/FXML/MainWindow.fxml
+++ b/code/rsrc/FXML/MainWindow.fxml
@@ -8,22 +8,53 @@
 <?import javafx.scene.text.Text?>
 
 <?import javafx.scene.image.ImageView?>
-<BorderPane prefWidth="600" stylesheets="@../css/background.css"
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<BorderPane prefWidth="600" prefHeight="700" stylesheets="@../css/background.css"
             xmlns="http://javafx.com/javafx/16"
             xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="view.MainWindow"
-            fx:id="mainWindow">
+            fx:id="startWindow">
     <center>
-        <FlowPane alignment="CENTER" orientation="VERTICAL">
-            <Text text="CHOISIR SON PSEUDO" fx:id="pseudoInstruct"/>
+        <GridPane BorderPane.alignment="CENTER">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="191.0" minWidth="10.0" prefWidth="173.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="362.0" minWidth="10.0" prefWidth="261.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="194.0" minWidth="10.0" prefWidth="166.0" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints maxHeight="132.0" minHeight="10.0" prefHeight="132.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="266.0" minHeight="10.0" prefHeight="186.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="125.0" minHeight="0.0" prefHeight="61.0" vgrow="SOMETIMES" />
+            </rowConstraints>
+            <children>
+                <ImageView fx:id="flopflop" fitHeight="196.0" fitWidth="169.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="1"/>
+                <Button fx:id="closeButton"  mnemonicParsing="false" prefHeight="28.0" prefWidth="82.0" text="Quitter" textFill="#943a3a" GridPane.rowIndex="2" />
+                <Button fx:id="scoreButton"  mnemonicParsing="false" prefHeight="24.0" prefWidth="168.0" text="Meilleurs scores" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                <GridPane GridPane.columnIndex="1" GridPane.rowIndex="1">
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="85.0" minHeight="10.0" prefHeight="68.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="115.0" minHeight="10.0" prefHeight="81.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                    <children>
+                        <Button onAction="#startGame" fx:id="playButton" mnemonicParsing="false" prefHeight="64.0" prefWidth="261.0" text="JOUER" GridPane.rowIndex="2">
+                            <font>
+                                <Font name="GentiumAlt" size="29.0" />
+                            </font>
+                        </Button>
+                        <TextField prefHeight="57.0" prefWidth="261.0" GridPane.rowIndex="1" fx:id="pseudoJoueur"/>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Saisir un pseudo :" wrappingWidth="259.7294921875" />
+                    </children>
+                </GridPane>
 
-            <TextField text="PSEUDO" />
-            <Button prefHeight="37.0" prefWidth="144.0" text="START" textAlignment="CENTER">
-                <FlowPane>
-                    <ImageView/>
-                </FlowPane>
-            </Button>
-        </FlowPane>
+            </children>
+        </GridPane>
     </center>
+
 
 </BorderPane>
