--- a/code/rsrc/FXML/Game.fxml
+++ b/code/rsrc/FXML/Game.fxml
@@ -6,6 +6,7 @@
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="view.Game"
             prefHeight="700.0" prefWidth="450.0"
+            maxWidth="450" maxHeight="700"
             fx:id="gameBp"
             onKeyPressed="#move">
     <top>
