--- a/code/rsrc/FXML/MainWindow.fxml
+++ b/code/rsrc/FXML/MainWindow.fxml
@@ -6,10 +6,12 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<BorderPane prefWidth="650" prefHeight="700" stylesheets="@../css/background.css"
+<BorderPane prefWidth="450" prefHeight="700" stylesheets="@../css/background.css"
+            maxWidth="450" maxHeight="700"
             xmlns="http://javafx.com/javafx/16"
             xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="view.MainWindow">
+            fx:controller="view.MainWindow"
+            fx:id="mainBp">
     <center>
         <GridPane BorderPane.alignment="CENTER">
             <columnConstraints>
@@ -27,7 +29,7 @@
             <Button  mnemonicParsing="false" prefHeight="28.0" prefWidth="82.0" text="Quitter"
                     textFill="#943a3a" GridPane.rowIndex="2" fx:id="leaveButton"/>
             <Button mnemonicParsing="false" prefHeight="24.0" prefWidth="168.0"
-                    text="Meilleurs scores" GridPane.columnIndex="2" GridPane.rowIndex="2"/>
+                    text="Meilleurs scores" GridPane.columnIndex="2" GridPane.rowIndex="2" fx:id="scoreboardButton" onAction="#openScoreboard"/>
             <GridPane GridPane.columnIndex="1" GridPane.rowIndex="1">
                 <columnConstraints>
                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
@@ -44,7 +46,7 @@
                         <Font name="GentiumAlt" size="29.0"/>
                     </font>
                 </Button>
-                <TextField prefHeight="57.0" prefWidth="261.0" GridPane.rowIndex="1"/>
+                <TextField prefHeight="57.0" prefWidth="261.0" GridPane.rowIndex="1" fx:id="pseudoJoueur"/>
                 <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Saisir un pseudo :"
                       wrappingWidth="259.7294921875"/>
             </GridPane>
