--- a/code/rsrc/FXML/Game.fxml
+++ b/code/rsrc/FXML/Game.fxml
@@ -7,6 +7,7 @@
             fx:controller="view.Game"
             prefHeight="700.0" prefWidth="450.0"
             maxWidth="450" maxHeight="700"
+            minWidth="450" minHeight="700"
             fx:id="gameBp"
             onKeyPressed="#move">
     <top>
