--- a/code/rsrc/FXML/MainWindow.fxml
+++ b/code/rsrc/FXML/MainWindow.fxml
@@ -25,7 +25,7 @@
                 <RowConstraints maxHeight="125.0" minHeight="0.0" prefHeight="61.0" vgrow="SOMETIMES"/>
             </rowConstraints>
             <ImageView fx:id="flopflop" fitHeight="196.0" fitWidth="169.0" pickOnBounds="true" preserveRatio="true"
-                       GridPane.rowIndex="1"/>
+                       GridPane.rowIndex="1" disable="true"/>
             <Button  mnemonicParsing="false" prefHeight="28.0" prefWidth="82.0" text="Quitter"
                     textFill="#943a3a" GridPane.rowIndex="2" fx:id="leaveButton"/>
             <Button mnemonicParsing="false" prefHeight="24.0" prefWidth="168.0"
