--- a/code/rsrc/FXML/Game.fxml
+++ b/code/rsrc/FXML/Game.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.control.Button?>
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="view.Game"
@@ -10,6 +11,14 @@
             minWidth="450" minHeight="700"
             fx:id="gameBp"
             onKeyPressed="#move">
+    <top>
+        <Button fx:id="restartButton">
+            restart
+        </Button>
+        <Button fx:id="homeButton">
+            restart
+        </Button>
+    </top>
 
 </BorderPane>
 
