--- a/code/rsrc/FXML/MainWindow.fxml
+++ b/code/rsrc/FXML/MainWindow.fxml
@@ -11,7 +11,7 @@
             xmlns="http://javafx.com/javafx/16"
             xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="view.MainWindow"
-            fx:id="mainBp">
+            fx:id="gameBp">
     <center>
         <GridPane BorderPane.alignment="CENTER">
             <columnConstraints>
