--- a/code/rsrc/FXML/MainWindow.fxml
+++ b/code/rsrc/FXML/MainWindow.fxml
@@ -2,54 +2,54 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<BorderPane prefWidth="450" prefHeight="700" stylesheets="@../css/background.css"
-            maxWidth="450" maxHeight="700"
+<?import javafx.geometry.Insets?>
+<BorderPane prefWidth="450" prefHeight="700"
             xmlns="http://javafx.com/javafx/16"
             xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="view.MainWindow"
             fx:id="gameBp">
     <center>
-        <GridPane BorderPane.alignment="CENTER">
-            <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="191.0" minWidth="10.0" prefWidth="173.0"/>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="362.0" minWidth="10.0" prefWidth="261.0"/>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="194.0" minWidth="10.0" prefWidth="166.0"/>
-            </columnConstraints>
+        <GridPane BorderPane.alignment="CENTER" alignment="CENTER">
             <rowConstraints>
-                <RowConstraints maxHeight="132.0" minHeight="10.0" prefHeight="132.0" vgrow="SOMETIMES"/>
-                <RowConstraints maxHeight="266.0" minHeight="10.0" prefHeight="186.0" vgrow="SOMETIMES"/>
-                <RowConstraints maxHeight="125.0" minHeight="0.0" prefHeight="61.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="40.0" maxHeight="40.0"/>
+                <RowConstraints maxHeight="50.0" minHeight="50.0"/>
+                <RowConstraints maxHeight="80.0" minHeight="80.0"/>
             </rowConstraints>
-            <ImageView fx:id="flopflop" fitHeight="196.0" fitWidth="169.0" pickOnBounds="true" preserveRatio="true"
-                       GridPane.rowIndex="1" disable="true"/>
-            <Button  mnemonicParsing="false" prefHeight="28.0" prefWidth="82.0" text="Quitter"
-                    textFill="#943a3a" GridPane.rowIndex="2" fx:id="leaveButton"/>
-            <Button mnemonicParsing="false" prefHeight="24.0" prefWidth="168.0"
-                    text="Meilleurs scores" GridPane.columnIndex="2" GridPane.rowIndex="2" fx:id="scoreboardButton" onAction="#openScoreboard"/>
-            <GridPane GridPane.columnIndex="1" GridPane.rowIndex="1">
-                <columnConstraints>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                </columnConstraints>
-                <rowConstraints>
-                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                    <RowConstraints maxHeight="85.0" minHeight="10.0" prefHeight="68.0" vgrow="SOMETIMES"/>
-                    <RowConstraints maxHeight="115.0" minHeight="10.0" prefHeight="81.0" vgrow="SOMETIMES"/>
-                </rowConstraints>
-                <Button onAction="#startGame" mnemonicParsing="false" prefHeight="64.0"
-                        prefWidth="261.0" text="JOUER" GridPane.rowIndex="2"
-                        fx:id="startButton">
-                    <font>
-                        <Font name="GentiumAlt" size="29.0"/>
-                    </font>
-                </Button>
-                <TextField prefHeight="57.0" prefWidth="261.0" GridPane.rowIndex="1" fx:id="pseudoJoueur"/>
-                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Saisir un pseudo :"
-                      wrappingWidth="259.7294921875"/>
-            </GridPane>
+            <Text GridPane.rowIndex="0" text="Saisir un pseudo :" >
+                <font>
+                    <Font size="25"/>
+                </font>
+            </Text>
+
+            <TextField fx:id="pseudoJoueur" GridPane.rowIndex="1"
+                       prefHeight="57.0" prefWidth="260.0"/>
+
+            <Button GridPane.rowIndex="2"
+                    mnemonicParsing="false"
+                    prefHeight="65.0" prefWidth="260.0"
+                    text="JOUER"
+                    onAction="#startGame"/>
         </GridPane>
     </center>
+
+    <bottom>
+        <StackPane alignment="TOP_CENTER">
+            <BorderPane.margin>
+                <Insets right="20.0" left="20.0" bottom="80.0" />
+            </BorderPane.margin>
+
+            <Button StackPane.alignment="BASELINE_LEFT"
+                    mnemonicParsing="false"
+                    text="Quitter"
+                    onAction="#exitGame"/>
+
+            <Button StackPane.alignment="BASELINE_RIGHT"
+                    mnemonicParsing="false"
+                    text="Meilleurs scores"
+                    onAction="#openScoreboard"/>
+        </StackPane>
+    </bottom>
 </BorderPane>
