--- a/code/rsrc/FXML/ScoreBoard.fxml
+++ b/code/rsrc/FXML/ScoreBoard.fxml
@@ -1,74 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.Font?>
 <?import javafx.geometry.Insets?>
-<AnchorPane fx:id="score" prefHeight="400.0" prefWidth="600.0"
-            maxHeight="700" maxWidth="450"
+<?import javafx.scene.image.ImageView?>
+<BorderPane fx:id="scoreBp"
+            prefHeight="450.0" prefWidth="700.0"
             xmlns="http://javafx.com/javafx/16"
             xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="view.ScoreBoard">
-    <children>
-        <GridPane layoutX="1.0" prefHeight="400.0" prefWidth="600.0">
+    <top>
+        <Text BorderPane.alignment="CENTER" textAlignment="CENTER" text="Meilleurs Scores">
+            <font>
+                <Font size="45.0"/>
+            </font>
+        </Text>
+    </top>
+
+    <center>
+        <GridPane BorderPane.alignment="CENTER" alignment="CENTER">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="194.0" minWidth="10.0" prefWidth="94.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="392.0" minWidth="10.0" prefWidth="392.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="122.0" minWidth="10.0" prefWidth="97.0" />
+                <ColumnConstraints minWidth="80"  maxWidth="80"/>
+                <ColumnConstraints minWidth="225" maxWidth="225"/>
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="90" maxHeight="90"/>
+                <RowConstraints minHeight="90" maxHeight="90"/>
+                <RowConstraints minHeight="90" maxHeight="90"/>
             </rowConstraints>
-            <children>
-                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Meilleurs Scores" textAlignment="CENTER" wrappingWidth="391.7294921875" GridPane.columnIndex="1">
-                    <font>
-                        <Font size="45.0" />
-                    </font>
-                </Text>
-                <!--<StackPane fx:id="im1" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1">
-                    <ImageView fx:id="first" pickOnBounds="true" preserveRatio="true" fitWidth="${im1.width}" fitHeight="${im1.height}"/>
-                </StackPane>
-                <StackPane fx:id="im2" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="2">
-                    <ImageView fx:id="second" pickOnBounds="true" preserveRatio="true" fitWidth="${im2.width}" fitHeight="${im2.height}"/>
-                </StackPane>
-                <StackPane fx:id="im3" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="3">
-                    <ImageView fx:id="third" pickOnBounds="true" preserveRatio="true" fitWidth="${im3.width}" fitHeight="${im3.height}"/>
-                </StackPane>-->
+            <ImageView fx:id="first" GridPane.rowIndex="0" GridPane.columnIndex="0"
+                       fitWidth="80" fitHeight="80" preserveRatio="true"/>
 
-                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="1" wrappingWidth="192.7294921875" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1">
-                    <font>
-                        <Font size="34.0" />
-                    </font>
-                </Text>
-                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="2 -" wrappingWidth="50.7294921875" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="2">
-                    <font>
-                        <Font size="34.0" />
-                    </font>
-                </Text>
-                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="3 -" wrappingWidth="44.7294921875" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="3">
-                    <font>
-                        <Font size="34.0" />
-                    </font>
-                </Text>
-                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="1 - " wrappingWidth="61.7294921875" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                    <font>
-                        <Font size="34.0" />
-                    </font>
-                </Text>
-                <Button fx:id="retourButton" mnemonicParsing="false" onAction="#retourButtonAction" prefHeight="35.0" prefWidth="105.0" text="Retour" GridPane.columnIndex="2" GridPane.rowIndex="3">
-                    <GridPane.margin>
-                        <Insets left="10.0" right="10.0" />
-                    </GridPane.margin></Button>
-            </children>
+            <ImageView fx:id="second" GridPane.rowIndex="1" GridPane.columnIndex="0"
+                       fitWidth="80" fitHeight="80" preserveRatio="true"/>
+
+            <ImageView fx:id="third" GridPane.rowIndex="2" GridPane.columnIndex="0"
+                       fitWidth="80" fitHeight="80" preserveRatio="true"/>
+
+            <Text GridPane.rowIndex="0" GridPane.columnIndex="1" GridPane.halignment="CENTER"
+                  text="Nom" styleClass="score-text"/>
+
+            <Text GridPane.rowIndex="1" GridPane.columnIndex="1" GridPane.halignment="CENTER"
+                  text="Nom" styleClass="score-text"/>
+
+            <Text GridPane.rowIndex="2" GridPane.columnIndex="1" GridPane.halignment="CENTER"
+                  text="Nom" styleClass="score-text"/>
         </GridPane>
-    </children>
-</AnchorPane>
+    </center>
+
+    <bottom>
+        <Button BorderPane.alignment="BASELINE_RIGHT"
+                mnemonicParsing="false"
+                onAction="#retourButtonAction"
+                text="Retour">
+            <BorderPane.margin>
+                <Insets bottom="80.0" right="20.0"/>
+            </BorderPane.margin>
+        </Button>
+    </bottom>
+</BorderPane>
 
