Score marche mais 1 peu bancal la fonction

--- a/code/rsrc/css/background.css
+++ b/code/rsrc/css/background.css
@@ -21,7 +21,7 @@
     -fx-alignment: center;
 }
 
-.score-text{
-    text-align: center;
+#scoreText{
     -fx-font-size: 30px;
+    -fx-font-weight: bold;
 }
