--- a/code/rsrc/FXML/Game.fxml
+++ b/code/rsrc/FXML/Game.fxml
@@ -5,21 +5,37 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="view.Game"
             prefHeight="700.0" prefWidth="450.0"
             fx:id="gameBp">
     <top>
-        <Button fx:id="restartButton">
-            restart
-        </Button>
 
-        <Button fx:id="homeButton">
-            restart
-        </Button>
         <Text fx:id="scoreText" fill="antiquewhite"/>
+
     </top>
+    <center>
+        <Button fx:id="restartButton" minWidth="100" minHeight="20">
+
+            <graphic>
+                <Text fill="antiquewhite">RESTART</Text>
+                <ImageView fitWidth="240" fitHeight="120">
+                    <image>
+                        <Image url="/image/restarticon.png"/>
+                    </image>
+                </ImageView>
+            </graphic>
+        </Button>
+    </center>
+    <bottom>
+        <Button fx:id="homeButton" minWidth="100" minHeight="20" opacity="20" disable="true">
+            home
+        </Button>
+    </bottom>
+
 </BorderPane>
 
 
