[dev] fin restart

--- a/code/rsrc/FXML/Game.fxml
+++ b/code/rsrc/FXML/Game.fxml
@@ -13,9 +13,7 @@
             prefHeight="700.0" prefWidth="450.0"
             fx:id="gameBp">
     <top>
-
-        <Text fx:id="scoreText" fill="antiquewhite"/>
-
+        <Text fx:id="scoreText" fill="antiquewhite" x="180"/>
     </top>
     <center>
         <Button fx:id="restartButton" minWidth="100" minHeight="20">
