--- a/code/rsrc/css/background.css
+++ b/code/rsrc/css/background.css
@@ -9,7 +9,7 @@
     -fx-text-fill: D2691E;
 }
 
-.button{
+.button {
     -fx-padding: 5 22 5 22;
     -fx-font-size: 16px;
     -fx-background-color: #E66A6A;
@@ -17,11 +17,11 @@
     -fx-border-width: 2;
     -fx-text-fill: #fff;
     -fx-background-insets: 0 0 0 0, 0, 1, 2;
-    -fx-cell-size: cover,auto;
+    -fx-cell-size: cover, auto;
     -fx-alignment: center;
 }
 
-#scoreText{
+.score-text {
     -fx-font-size: 30px;
     -fx-font-weight: bold;
 }
