--- a/code/rsrc/css/background.css
+++ b/code/rsrc/css/background.css
@@ -1,5 +1,5 @@
 #mainWindow{
-    -fx-background-image: url("image/background.jpg");
+    -fx-background-image: url("image/background.png");
     -fx-background-repeat: repeat;
     -fx-background-size: cover, auto;
 }
